fix login form styling via testing on mobile device

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -440,7 +440,7 @@ a.btn {
 }
 .login-form {
   #mainHolder {
-    padding-top: 10%;
+    padding-top: 9%;
   }
 }
 @media (min-width: 992px) {
